# supercompilation-by-evaluation

./: .gitignore  GHC.hs  IdSupply.hs  Utilities.hs  stack.yaml  supercompile.cabal  testWithStack.sh
Core/: Parser.hs  Syntax.hs
Supercompile/: Drive.hs
examples/: Prelude.core
