Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               supercompile
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/supercompile
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Call-by-need supercompiler in Haskell
Category:           Language

Executable supercompile
    Main-Is:        Main.hs
    other-modules:
      Core.FreeVars
      Core.Parser
      Core.Prelude
      Core.Renaming
      Core.Syntax
      Evaluator.Evaluate
      Evaluator.FreeVars
      Evaluator.Syntax
      GHC
      IdSupply
      Name
      Renaming
      StaticFlags
      Supercompile.Drive
      Supercompile.Match
      Supercompile.Residualise
      Supercompile.Split
      Termination.Terminate
      Utilities

    Build-Depends:
       base >= 4 && < 5,
       containers,
       deepseq,
       pretty,
       QuickCheck,
       random,
       process,
       directory,
       filepath,
       time,
       haskell-src-exts,
       cpphs
    Ghc-Options:    -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-incomplete-patterns
